Add workaround for Java9+ & fix a crash